tests/ui/github_closed_issue.rs


#[issue::track(url="https://github.com/KaiserKarel/issue/issues/2")]
fn main() {

}